<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:onClick="OnSetAvatarButton"
            android:textAlignment="center"
            app:srcCompat="@drawable/ic_logo_00"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="53dp" />

        <EditText
            android:id="@+id/teamNameField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/teamNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name_label" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="53dp" />

        <EditText
            android:id="@+id/teamAdressField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/address_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/teamAdressTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/address_label" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="53dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#919191"
            android:onClick="OnOpenInGoogleMaps"
            android:text="@string/button_text" />

    </LinearLayout>
</RelativeLayout>